istio/k8s/plugins/kiali/virtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  #- "kiali.tjhiatt.dev"
  #- "kiali.timhiatt.dev"
  - tjhiatt.dev
  - timhiatt.dev
  gateways:
  - istio-system/ingress-gateway
  http:
  - match:
    - uri:
        prefix: "/kiali"
    #rewrite:
    #  uri: "/"
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
